# PersonalFinance

./: db.sqlite3  manage.py  pyproject.toml  run.sh
PersonalFinance/: asgi.py  urls.py  wsgi.py
PersonalFinance/settings/: base.py  dev.py  dev.py.dist  prod.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: main.ts  router.ts  style.css
frontend/src/pages/: Home.vue
tailwindConf/: apps.py
tailwindConf/static_src/: package-lock.json  package.json
tailwindConf/static_src/src/: styles.css
transacoes/: apps.py  urls.py
transacoes/admin/: CategoriaAdmin.py  MetodoPagamentoAdmin.py  TransacaoAdmin.py  __init__.py
transacoes/migrations/: 0001_initial.py  0002_transacao.py  0003_alter_categoria_nome_alter_metodopagamento_nome_and_more.py
transacoes/models/: Categoria.py  MetodoPagamento.py  Transacao.py  __init__.py
transacoes/templates/: base.html
